--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body{
     background-color: #EBECEE;;
 }
+@import url("styles/header.css");
+
+:root {
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+}
+
+body {
+    background-color: var(--cor-de-fundo);
+}
